--- a/conversor/pubspec.yaml
+++ b/conversor/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  syncfusion_flutter_charts: ^20.2.48
+  pie_chart: ^5.3.2
 
 dev_dependencies:
   flutter_test:
